--- a/client/src/Components/EvictionMap/style.css
+++ b/client/src/Components/EvictionMap/style.css
@@ -2,9 +2,9 @@
 .legend {
     display: grid;
     grid-template-rows: 10% 10% 60% 20%;
-    width: 250px;
-    height: 40vh;
-    z-index: 99999999;
+    width: 280px;
+    height: 38vh;
+    z-index: 999;
     position: fixed;
     bottom: 18vh;
     right: 1%;
@@ -58,6 +58,7 @@
 .building-toggle-sublabel {
   margin: .2em auto 0 auto;
   font-size: .8em;
+  z-index: 999999;
   /* width: 200px; */
   line-height: 1.2em;
   font-style: italic;
@@ -102,7 +103,7 @@
     display: grid;
     grid-template-columns: 25% 75%;
     padding: 10px;
-    /* font-size: .8em; */
+    font-size: 1em;
     width: 80%;
     margin-left: 10%;
 
@@ -117,7 +118,7 @@
 .legend-symbol {
     height: 15px;
     width: 15px;
-    margin: 5px 5px 5px 50%;
+    margin: 5px 5px 0px 50%;
 }
 
 .legend-label {
@@ -128,7 +129,7 @@
 
 #month-selector {
     z-index: 9999;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 #month-selector > .ui.dropdown > .text {
@@ -190,11 +191,11 @@
 @media only screen and  (max-width: 850px) {
     .legend {
         font-size: .8rem;
-        grid-template-rows: 10% 16% 50%;
+        grid-template-rows: 10% 16% 51% auto;
         width: 250px;
         height: 35vh;
         z-index: 9999998;
-        padding: 1%;
+        padding: 5px;
         position: fixed;
         bottom: 23vh;
         overflow: auto;
@@ -205,7 +206,16 @@
       margin-left: 10%;
       /* display: grid;
       grid-template-columns: 25% 75%; */
-      padding: 1px;
+      padding: 0px;
+      /* margin-bottom: 5px; */
+  }
+
+  #legend-footer > p {
+    font-size: .9em;
+  }
+
+  #legend-footer {
+    margin-top: 2px;
   }
     /* .legend {
         font-size: .8em;
